Add deployment scripts and links

--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "build": "npm run prepare && gitbook build",
     "prepare": "gitbook install",
+    "deploy": "sh ./deploy.sh",
     "start": "npm run prepare && gitbook serve"
   },
   "author": "Gopikrishna Sathyamurthy",
   "license": "ISC",
   "devDependencies": {
     "gitbook-cli": "2.3.2",
+    "gitbook-plugin-html-minifier": "0.0.1",
     "rimraf": "2.6.2"
-  },
-  "dependencies": {}
+  }
 }
